# aegis-waf

./: .gitignore  Cargo.toml  Dockerfile  deny.toml  docker-compose.yml
.github/: SECURITY.md
.github/workflows/: release.yml  security-audit.yml  test.yml
docs/: API.md  ARCHITECTURE.md  CLI_GUIDE.md  CONFIGURATION.md  INSTALLATION.md  README.md  SECURITY.md
examples/: basic_setup.toml  enterprise_setup.toml  kubernetes_deployment.yaml
install/: install.py  install.sh
install/config/: default.toml  production.toml
install/scripts/: health-check.sh  setup-tls.sh
install/systemd/: aegis-waf.service
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/analytics/: dashboard.rs  logger.rs  mod.rs  reporter.rs
src/cli/: analytics_cmd.rs  config_cmd.rs  health_cmd.rs  mod.rs  protection_cmd.rs  rules_cmd.rs  service_cmd.rs
src/engine/: behavioral_analyzer.rs  bot_detector.rs  dpi_engine.rs  ingress_filter.rs  mod.rs  protocol_validator.rs  rate_limiter.rs  response_engine.rs  threat_intel.rs
src/io/: mod.rs  network.rs  quic_handler.rs  tls_handler.rs
src/security/: audit.rs  crypto.rs  mod.rs  secrets.rs
src/tests/: attack_simulations.rs  integration_tests.rs  mod.rs
tests/attack_scenarios/: http_flood.sh  slowloris.sh  syn_flood.sh
tests/compliance_tests/: owasp_top10.yaml
web-dashboard/: index.html  package.json
